# simulator_alignment_data

./: .gitignore  LICENSE  README.md  prep_data.py  pyproject.toml
benchmarks/: base.py  cast.py  ikat.py
data/iKAT2023/: alignment_data.jsonl
scripts/: cast.py  ikat.py  prep_data.py
tests/benchmarks/: test_data_sampling.py
